feat: added arrow action

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -4,7 +4,7 @@ $color-keys-background: #3f4c61;
 $color-keys-active-background: #525661;
 $color-special-keys-background: #212636;
 $color-keyboard-shadow: #000038;
-$color-keys-text: rgb(246, 250, 246);
+$color-keys-text: #f6faf6;
 
 
 $content-width: 1197px;
