--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,9 +9,21 @@ body {
 }
 
 h1 {
+  margin: 1vh 1vw 1vh 0;
+  padding: 5px;
+  text-align: center;
   font-size: 24px;
+  width: 80rem;
+  background-color: $color-keyboard-background;
+  border-radius: 5px;
+  color: $color-keys-text;
   @media screen and (max-width: 900px){
     font-size: 1px;
     opacity: 0;
   }
+}
+
+p {
+ margin: 0;
+ padding-top: 5px;
 }
