--- a/src/sass/layouts/_wrapper.scss
+++ b/src/sass/layouts/_wrapper.scss
@@ -6,10 +6,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 1.4rem;
   @include media-laptop {
     padding: 0 46px;
   }
   @include media-mobile {
-    padding: 0 21px;
+    padding: 0 10px;
   }
 }
