feat: load develop project

--- a/src/sass/components/_textarea.scss
+++ b/src/sass/components/_textarea.scss
@@ -8,6 +8,7 @@
   height: 40%;
   resize: none;
   border-radius: 5px;
+  outline: transparent;
 
   @media screen and (max-width: 900px){
     transform: scale(0.95);
