--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -417,4 +417,242 @@ ul {
   box-sizing: border-box;
 }
 
+html {
+  font-size: 10px;
+  font-family: Verdana, Arial, sans-serif;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
+h1 {
+  margin: 1vh 1vw 1vh 0;
+  padding: 5px;
+  text-align: center;
+  font-size: 24px;
+  width: 80rem;
+  background-color: #000000;
+  border-radius: 5px;
+  color: #f6faf6;
+}
+@media screen and (max-width: 900px) {
+  h1 {
+    font-size: 1px;
+    opacity: 0;
+  }
+}
+
+p {
+  margin: 0;
+  padding-top: 5px;
+}
+
+.wrapper {
+  max-width: 1197px;
+  height: 98vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
+}
+@media (max-width: 1197px) {
+  .wrapper {
+    padding: 0 46px;
+  }
+}
+@media (max-width: 414px) {
+  .wrapper {
+    padding: 0 10px;
+  }
+}
+
+.keyboard {
+  margin-top: 1vh;
+  margin-right: 1vw;
+  padding: 5px 10px;
+  width: 80rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #f6faf6;
+  font-weight: 400;
+  letter-spacing: 0.8px;
+  text-shadow: -1px -1px 1px black;
+  background-color: #000000;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px 2px #000038;
+  -moz-user-select: none;
+  user-select: none;
+}
+@media screen and (max-width: 900px) {
+  .keyboard {
+    transform: scale(0.9);
+  }
+}
+@media (max-width: 768px) {
+  .keyboard {
+    transform: scale(0.8);
+  }
+}
+@media screen and (max-width: 670px) {
+  .keyboard {
+    transform: scale(0.6);
+  }
+}
+@media (max-width: 414px) {
+  .keyboard {
+    transform: scale(0.42);
+  }
+}
+@media (max-width: 320px) {
+  .keyboard {
+    transform: scale(0.4);
+  }
+}
+
+.text-field {
+  background-color: #eeeeee;
+  margin-right: 1vw;
+  padding: 5px;
+  font-size: 1.4rem;
+  width: 80rem;
+  min-width: 10rem;
+  height: 40%;
+  resize: none;
+  border-radius: 5px;
+  outline: transparent;
+}
+@media screen and (max-width: 900px) {
+  .text-field {
+    transform: scale(0.95);
+  }
+}
+@media (max-width: 768px) {
+  .text-field {
+    height: 60%;
+    width: 95vw;
+  }
+}
+
+.keyboard {
+  margin-top: 1vh;
+  margin-right: 1vw;
+  padding: 5px 10px;
+  width: 80rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #f6faf6;
+  font-weight: 400;
+  letter-spacing: 0.8px;
+  text-shadow: -1px -1px 1px black;
+  background-color: #000000;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px 2px #000038;
+  -moz-user-select: none;
+  user-select: none;
+}
+@media screen and (max-width: 900px) {
+  .keyboard {
+    transform: scale(0.9);
+  }
+}
+@media (max-width: 768px) {
+  .keyboard {
+    transform: scale(0.8);
+  }
+}
+@media screen and (max-width: 670px) {
+  .keyboard {
+    transform: scale(0.6);
+  }
+}
+@media (max-width: 414px) {
+  .keyboard {
+    transform: scale(0.42);
+  }
+}
+@media (max-width: 320px) {
+  .keyboard {
+    transform: scale(0.4);
+  }
+}
+
+.key {
+  margin: 4px;
+  padding: 3px 8px 8px 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 5.5%;
+  flex-grow: 1;
+  height: 4rem;
+  font-size: 1.6rem;
+  background-color: #3f4c61;
+  border-radius: 5px;
+  box-shadow: inset -2px -2px 3px 2px #000038;
+  cursor: pointer;
+  transition: all 0.1s linear;
+  -webkit-tap-highlight-color: transparent;
+}
+.key:first-child {
+  flex-basis: 3.5%;
+}
+.key.special_key {
+  background-color: #212636;
+  font-size: 1rem;
+}
+.key.special_key-one_quarter {
+  flex-basis: 7%;
+}
+.key.special_key-one_quarter-slim {
+  height: 1.25rem;
+}
+.key.special_key-one_half {
+  flex-basis: 9%;
+}
+.key.special_key-double_quarter {
+  flex-basis: 13%;
+}
+.key.special_key-double_half {
+  flex-basis: 15%;
+}
+.key.special_key-double_half.active {
+  transform: none;
+}
+.key.special_key-seven {
+  flex-basis: 35%;
+}
+.key.special_key.active {
+  transform: scale(0.995, 0.95);
+  font-size: 1rem;
+}
+.key.active {
+  padding: 4px 8px 8px 4px;
+  box-shadow: inset -2px -2px 2px #000038;
+  background-color: #525661;
+  font-size: 1.7rem;
+  transform: scale(0.95);
+  transform-origin: 100% 100%;
+}
+
+.up-down-arrows {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 8%;
+}
+.up-down-arrows .key {
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+.up-down-arrows .key.active {
+  padding: 3px 8px 8px 3px;
+}
+
 /*# sourceMappingURL=style.css.map */
